genre routes added
